Add smooth ramping for song start and end transitions
Introduces smooth speed ramping at the beginning and end of song playback for more natural transitions. Updates configuration to support separate ramp steps for start and end, refactors related logic in MusicPlayer and MusicApp, and updates language files to reflect the new 'smooth_ramping' terminology and descriptions. Bumps version to 2.3.6.

--- a/resources/lang/da_DK.xml
+++ b/resources/lang/da_DK.xml
@@ -42,8 +42,8 @@
     <translation key="select_language">Vælg sprog:</translation>
     <translation key="language_saved">Sprog er gemt</translation>
     <translation key="save_button_text">Gem</translation>
-    <translation key="smooth_start">Blød start</translation>
-    <translation key="smooth_start_info">Gradvis acceleration</translation>
+    <translation key="smooth_ramping">Glatte Overgange</translation>
+    <translation key="smooth_ramping_info">Justerer hastigheden blødt i begyndelsen og slutningen af sangen for mere naturlige overgange.</translation>
     
     <!-- ================= -->
     <!-- VERSIONOPLYSNINGER -->
