--- a/resources/lang/ja_JA.xml
+++ b/resources/lang/ja_JA.xml
@@ -42,8 +42,8 @@
     <translation key="select_language">言語を選択：</translation>
     <translation key="language_saved">言語が保存されました</translation>
     <translation key="save_button_text">保存</translation>
-    <translation key="smooth_start">スムーズスタート</translation>
-    <translation key="smooth_start_info">徐々な加速</translation>
+    <translation key="smooth_ramping">スムーズな移行</translation>
+    <translation key="smooth_ramping_info">曲の始めと終わりで速度をスムーズに調整し、より自然な移行を実現します。</translation>
     
     <!-- ================= -->
     <!-- バージョン情報 -->
