--- a/resources/lang/ar_AR.xml
+++ b/resources/lang/ar_AR.xml
@@ -42,8 +42,8 @@
     <translation key="select_language">اختار اللغة:</translation>
     <translation key="language_saved">تم حفظ اللغة</translation>
     <translation key="save_button_text">حفظ</translation>
-    <translation key="smooth_start">بداية تدريجية</translation>
-    <translation key="smooth_start_info">تسارع تدريجي</translation>
+    <translation key="smooth_ramping">الانتقالات السلسة</translation>
+    <translation key="smooth_ramping_info">يضبط السرعة بسلاسة في بداية ونهاية الأغنية لانتقالات أكثر طبيعية.</translation>
     
     <!-- ================= -->
     <!-- معلومات الإصدار -->
