--- a/resources/lang/de_DE.xml
+++ b/resources/lang/de_DE.xml
@@ -42,8 +42,8 @@
     <translation key="select_language">Sprache auswählen:</translation>
     <translation key="language_saved">Sprache wurde gespeichert</translation>
     <translation key="save_button_text">Speichern</translation>
-    <translation key="smooth_start">Sanfter Start</translation>
-    <translation key="smooth_start_info">Noten starten mit sanfter Geschwindigkeit.</translation>
+    <translation key="smooth_ramping">Sanfte Übergänge</translation>
+    <translation key="smooth_ramping_info">Sanfte Geschwindigkeitsänderung am Anfang und Ende des Liedes für natürlichere Übergänge.</translation>
     
     <!-- ================= -->
     <!-- VERSIONSINFORMATION -->
