--- a/resources/lang/fr_FR.xml
+++ b/resources/lang/fr_FR.xml
@@ -42,8 +42,8 @@
     <translation key="select_language">Sélectionner la langue :</translation>
     <translation key="language_saved">Langue enregistrée</translation>
     <translation key="save_button_text">Enregistrer</translation>
-    <translation key="smooth_start">Démarrage doux</translation>
-    <translation key="smooth_start_info">Accélération progressive</translation>
+    <translation key="smooth_ramping">Transitions Douces</translation>
+    <translation key="smooth_ramping_info">Ajuste en douceur la vitesse au début et à la fin de la chanson pour des transitions plus naturelles.</translation>
     
     <!-- ================= -->
     <!-- INFORMATION SUR LA VERSION -->
