--- a/resources/lang/it_IT.xml
+++ b/resources/lang/it_IT.xml
@@ -42,8 +42,8 @@
     <translation key="select_language">Seleziona lingua:</translation>
     <translation key="language_saved">Lingua salvata</translation>
     <translation key="save_button_text">Salva</translation>
-    <translation key="smooth_start">Avvio graduale</translation>
-    <translation key="smooth_start_info">Accelerazione graduale</translation>
+    <translation key="smooth_ramping">Transizioni Dolci</translation>
+    <translation key="smooth_ramping_info">Regola dolcemente la velocità all'inizio e alla fine della canzone per transizioni più naturali.</translation>
     
     <!-- ================= -->
     <!-- INFORMAZIONI SULLA VERSIONE -->
