--- a/resources/lang/ko_KR.xml
+++ b/resources/lang/ko_KR.xml
@@ -42,8 +42,8 @@
     <translation key="select_language">언어 선택:</translation>
     <translation key="language_saved">언어가 저장되었습니다</translation>
     <translation key="save_button_text">저장</translation>
-    <translation key="smooth_start">부드러운 시작</translation>
-    <translation key="smooth_start_info">점진적 가속</translation>
+    <translation key="smooth_ramping">부드러운 전환</translation>
+    <translation key="smooth_ramping_info">노래의 시작과 끝에서 속도를 부드럽게 조절하여 더 자연스러운 전환을 제공합니다.</translation>
     
     <!-- ================= -->
     <!-- 버전 정보 -->
