--- a/resources/lang/mg_MG.xml
+++ b/resources/lang/mg_MG.xml
@@ -42,8 +42,8 @@
     <translation key="select_language">Misafidiana fiteny:</translation>
     <translation key="language_saved">Voavonjy ny fiteny</translation>
     <translation key="save_button_text">Tehirizo</translation>
-    <translation key="smooth_start">Fanombohana moramora</translation>
-    <translation key="smooth_start_info">Hafainganana moramora</translation>
+    <translation key="smooth_ramping">Fandefasana malefaka</translation>
+    <translation key="smooth_ramping_info">Manitsy ny hafainganana amim-pitandremana eo am-piandohana sy eo amin'ny faran'ny hira mba hahatonga ny fandefasana ho voajanahary kokoa.</translation>
     
     <!-- ================= -->
     <!-- FAMPANDRAISANA NY VERSIONS -->
