--- a/resources/lang/nl_NL.xml
+++ b/resources/lang/nl_NL.xml
@@ -42,8 +42,8 @@
     <translation key="select_language">Kies taal:</translation>
     <translation key="language_saved">Taal is opgeslagen</translation>
     <translation key="save_button_text">Opslaan</translation>
-    <translation key="smooth_start">Zachte start</translation>
-    <translation key="smooth_start_info">Geleidelijke versnelling</translation>
+    <translation key="smooth_ramping">Zachte Overgangen</translation>
+    <translation key="smooth_ramping_info">Past de snelheid aan het begin en einde van het lied soepel aan voor natuurlijkere overgangen.</translation>
     
     <!-- ================= -->
     <!-- VERSIE-INFORMATIE -->
