--- a/resources/lang/ru_RU.xml
+++ b/resources/lang/ru_RU.xml
@@ -42,8 +42,8 @@
     <translation key="select_language">Выберите язык:</translation>
     <translation key="language_saved">Язык был сохранен</translation>
     <translation key="save_button_text">Сохранить</translation>
-    <translation key="smooth_start">Плавный старт</translation>
-    <translation key="smooth_start_info">Плавное ускорение</translation>
+    <translation key="smooth_ramping">Плавные Переходы</translation>
+    <translation key="smooth_ramping_info">Плавно регулирует скорость в начале и конце песни для более естественных переходов.</translation>
     
     <!-- ================= -->
     <!-- ИНФОРМАЦИЯ О ВЕРСИИ -->
